--- a/recipes/curryrice.html
+++ b/recipes/curryrice.html
@@ -8,5 +8,28 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Japanese Curry Rice</h1>
+        <img src="../resources/curryrice.jpg">
+        <h2>Description</h2>
+        <p>Japanese curry rice is a beloved comfort food from Japan that combines a rich, mildly spicy curry sauce with tender chunks of meat, potatoes, carrots, and onions.</p>
+        <p>This dish is easy to customize based on your preference. Whether enjoyed at home or in a cozy Japanese curry house, curry rice is a true staple of Japanese home cooking that brings both comfort and flavor to the table.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 lb meat (chicken thighs, pork, or beef), cut into bite-sized pieces</li>
+            <li>2 medium potatoes, peeled and diced</li>
+            <li>2 medium carrots, peeled and sliced</li>
+            <li>1 large onion, sliced</li>
+            <li>2 tablespoons olive oil</li>
+            <li>3 cups water</li>
+            <li>1 box Japanese curry roux (Golden Curry, Vermont Curry, or Java Curry)</li>
+            <li>White rice</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li><strong>Prepare the ingredients.</strong> Peel and chop the potatoes, carrots, and onion. Cut your choice of meat into bite-sized pieces.</li>
+            <li><strong>Saute the meat and vegetables.</strong> Heat 2 tablespoons of oil in a large pot over medium heat. Add the meat and cook until browned on all sides. Add the onions and saute until translucent, about 3-5 minutes. Then add the carrots and potatoes, and cook for another 5 minutes.</li>
+            <li><strong>Add liquid and simmer.</strong> Pour in 3 cups of water, enough to cover the ingredients. Bring to a boil, then reduce heat to low. Skim off any foam or fat that rises to the top. Cover and simmer for about 15-20 minutes, or until the vegetables are tender.</li>
+            <li><strong>Add the curry roux.</strong> Break the curry roux into blocks and stir them into the pot. Keep stirring gently until the roux dissolves completely and the sauce thickens. Simmer uncovered for another 10 minutes, stirring occasionally to prevent sticking.</li>
+            <li><strong>Serve.</strong> Spoon the curry over a bed of white rice. Enjoy!</li>
+        </ol>
     </body>
 </html>
